rename agent to actor
